2004-03-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* cs-parser.jay: detect invalid embeded statements gracefully.
	bug #51113.

2004-03-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ecore.cs, typemanager.cs: Correct impl of cs1540 check.
	As a regex:
	s/
	the invocation type may not be a subclass of the tye of the item/
	The type of the item must be a subclass of the invocation item.
	/g
	
	Fixes bug #50820.

2004-03-25  Sebastien Pouliot  <sebastien@ximian.com>

	* attribute.cs: Added methods to get a string and a bool from an
	attribute. Required to information from AssemblyKeyFileAttribute,
	AttributeKeyNameAttribute (string) and AssemblyDelaySign (bool).
	* codegen.cs: Modified AssemblyName creation to include support for
	strongnames. Catch additional exceptions to report them as CS1548.
	* compiler.csproj: Updated include CryptoConvert.cs.
	* compiler.csproj.user: Removed file - user specific configuration.
	* CryptoConvert.cs: New. A COPY of the class CryptoConvert from 
	Mono.Security assembly. The original class is maintained and tested in
	/mcs/class/Mono.Security/Mono.Security.Cryptography/CryptoConvert.cs.
	* drivers.cs: Added support for /keyfile, /keycontainer and /delaysign
	like CSC 8.0 (C# v2) supports.
	* Makefile: Added CryptoConvert.cs to mcs sources.
	* rootcontext.cs: Added new options for strongnames.

2004-03-24 Ben Maurer  <bmaurer@users.sourceforge.net>

	* driver.cs: For --expect-error, report error code `2'
	if the program compiled with no errors, error code `1' if
	it compiled with an error other than the one expected.

2004-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* compiler.csproj: Updated for Visual Studio .NET 2003.
	* compiler.csproj.user: Updated for Visual Studio .NET 2003.
	* compiler.sln: Updated for Visual Studio .NET 2003.

2004-03-24  Ravi Pratap M  <ravi@ximian.com>

	* expression.cs: Fix bug #47234. We basically need to apply the
	rule that we prefer the conversion of null to a reference type